appId: com.masim05.bloodpressure.mobile
---
- launchApp:
    clearState: true
- scrollUntilVisible:
    element:
            text: I accept
    direction: DOWN
- tapOn:
        text: I accept
- tapOn:
    id: auth_mode_login
- tapOn:
    id: login_email
- inputText: us3@example.com
- hideKeyboard
- tapOn:
    id: login_password
- inputText: password123
- hideKeyboard
- tapOn:
    id: login_submit
- assertVisible:
    id: camera_upload
- assertVisible:
    id: bottom_nav_history