appId: com.masim05.bloodpressure.mobile
---
- launchApp:
    clearState: true
- scrollUntilVisible:
    element:
            text: I accept
    direction: DOWN
- tapOn:
        text: I accept
- tapOn:
    id: auth_mode_login
- tapOn:
    id: login_email
- inputText: us4@example.com
- hideKeyboard
- tapOn:
    id: login_password
- inputText: password123
- hideKeyboard
- tapOn:
    id: login_submit
- tapOn:
    text: (While using the app|Only this time|Allow)
    optional: true
- assertVisible:
    id: bottom_nav_history
- tapOn:
    id: bottom_nav_history
- assertVisible:
    id: history_table
- assertVisible:
    text: "125"