appId: com.masim05.bloodpressure.mobile
---
- launchApp:
    clearState: true
- scrollUntilVisible:
    element:
            text: I accept
    direction: DOWN
- tapOn:
        text: I accept
- tapOn:
    id: auth_mode_new_account
- tapOn:
    id: signin_email
- inputRandomEmail
- hideKeyboard
- tapOn:
    id: signin_password
- inputText: password123
- hideKeyboard
- tapOn:
    id: signin_submit
- assertVisible:
    id: guide_screen
- tapOn:
    id: guide_continue
- assertVisible:
    id: camera_upload
- stopApp
- launchApp
- assertVisible:
    id: camera_screen