appId: com.masim05.bloodpressure.mobile
---
- launchApp:
    clearState: true
- scrollUntilVisible:
    element:
            text: I accept
    direction: DOWN
- tapOn:
        text: I accept
- tapOn:
    id: auth_mode_new_account
- tapOn:
    id: signin_email
- inputRandomEmail
- hideKeyboard
- tapOn:
    id: signin_password
- inputText: password123
- hideKeyboard
- tapOn:
    id: signin_submit
- assertVisible:
    id: guide_screen
- tapOn:
    id: guide_continue
- tapOn:
    text: (Deny|Don't allow|Not now)
    optional: true
- assertVisible:
    id: camera_open_settings
    optional: true
- assertVisible:
    id: bottom_nav_history
- tapOn:
    id: bottom_nav_history
- assertVisible:
    id: history_screen
