appId: com.masim05.bloodpressure.mobile
---
- launchApp:
    clearState: true
- scrollUntilVisible:
    element:
            text: I accept
    direction: DOWN
- tapOn:
        text: I accept
- tapOn:
    id: auth_mode_login
- tapOn:
    id: login_email
- inputText: us4@example.com
- hideKeyboard
- tapOn:
    id: login_password
- inputText: password123
- hideKeyboard
- tapOn:
    id: login_submit
- tapOn:
    text: (While using the app|Only this time|Allow)
    optional: true
- assertNotVisible:
    id: camera_loading
- tapOn:
    id: camera_upload
- assertVisible:
    id: history_table
- assertVisible:
    id: history_last_uploaded_row
- tapOn:
    id: history_last_uploaded_row
- assertVisible:
    id: measurement_detail_image
- assertVisible:
    id: measurement_detail_image_loaded
